# nash-mcp

./: .env.example  .flake8  .gitignore  README.md  poetry.toml  pyproject.toml
src/nash_mcp/: constants.py  nash_help.py  process_manager.py  server.py
src/nash_mcp/execute/: __init__.py  execute_command.py  execute_python.py  list_installed_packages.py
src/nash_mcp/fetch_webpage/: fetch_webpage.py
src/nash_mcp/nash_secrets/: nash_secrets.py
src/nash_mcp/nash_tasks/: __init__.py  nash_tasks.py
src/nash_mcp/operate_browser/: __init__.py  browser_agent.py  operate_browser.py
src/nash_mcp/operate_webpage/: __init__.py  operate_webpage.py
tests/unit/fetch_webpage/: test_fetch_webpage.py
tests/unit/nash_secrets/: test_nash_secrets.py  test_secrets.json
