[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nash-mcp"
version = "0.1.7"
description = "Nash MCP"
authors = ["Nash Team <team@nash.run>"]
license = "MIT"
readme = "README.md"
packages = [{include = "nash_mcp", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
requests = ">=2.32.3,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
matplotlib = ">=3.10.0,<4.0.0"
beautifulsoup4 = ">=4.13.3,<5.0.0"
sqlalchemy = ">=2.0.38,<3.0.0"
scikit-learn = ">=1.6.1,<2.0.0"
torch = ">=2.6.0,<3.0.0"
tensorflow = ">=2.18.0,<3.0.0"
mcp = {version = ">=1.3.0,<2.0.0", extras = ["cli"]}
html2text = ">=2024.2.26,<2025.0.0"
selenium = ">=4.29.0,<5.0.0"
playwright = ">=1.50.0,<2.0.0"
webdriver-manager = ">=4.0.2,<5.0.0"
openpyxl = ">=3.1.5,<4.0.0"
slugify = ">=0.0.1,<0.0.2"
psycopg2-binary = "^2.9.10"
tabulate = "^0.9.0"
seaborn = "^0.13.2"
statsmodels = "^0.14.4"
python-dotenv = "^1.0.1"

[tool.poetry.scripts]
nash = "nash_mcp.server:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = "E203"
